decksite/static/css/pd.css
/* ... */
/* Show the caret on hover. */
.hovering > a:after {
    opacity: 1;
    transform: translateY(0); /* In the revealed state the caret is sitting inside the menuitem's padding. */
    transition: all 0.3s ease-out; /* Ease up when we transition to visible position in .hovering > a:after on hover. */
}

/*

Mana bar

We show the color composition of a deck with a horizontal bar made up of the colors of Magic as printed on cards in their mana symbols.

*/

.mana:nth-child(1) {
    border-left: 0.05rem solid #999;
}

.mana {
    border-bottom: 0.05rem solid #999;
    border-right: 0.05rem solid #999;
    border-top: 0.05rem solid #999;
    display: inline-block;
    height: 1em; /* This appears in table rows so needs to use be relative. */
    vertical-align: text-top;
}

.mana-W {
    background-color: #fffcda;
}

.mana-U {
    background-color: #ace2fa
}

.mana-B {
    background-color: #ccc2c0;
}

.mana-R {
    background-color: #f8aa92;
}

.mana-G {
    background-color: #9dd2af;
}

/*

Responsive tables

We stack our table rows on smaller screen sizes instead of stretching off the side of the screen.
This is of dubious value and should probably be revisited.

*/

@media only screen and (max-width: 60rem) {
    table, tbody, th, td, tr {
        display: block;
    }

    thead {
        display: none;
    }

    tr {
        border-bottom: 0.05rem solid #999;
        padding: 1rem 0;
    }

    td {
        padding-left: 0;
        text-align: left;
    }

    table.with-marginalia {
        margin-left: 0;
    }
    td.marginalia {
        margin: 0;
        text-align: left;
    }
    td.c, td.n {
        text-align: left;
    }

    /* But don't screw up Google's HTML/CSS for the search box in the menu. */
    .gsc-search-box table {
        display: table;
    }
    .gsc-search-box tbody {
        display: table-row-group;
    }
    .gsc-search-box tr {
        display: table-row;
    }
    .gsc-search-box td, th {
        display: table-cell;
    }
}

/*

Deck

*/

.bye {
    font-size: 0.8rem;
}

/*

Card

Cards are 445px tall images that are usually 312px wide but may be wider if they represent something special like a meld card.

*/

.card-img {
    height: 15rem;
    padding-top: 1rem;
}

/* Constrain the width of the bug description so it doesn't prevent wrapping of other interesting content alongside the card image. */
p.bugged {
    width: 10.516853933rem; /* The width of a card when the height is card-img above. */
}

.bugged::after {
    content: "🐞 ";
    margin-left: 0.2em;
}

.illegal::after {
    content: "﻿🚫";
    margin-left: 0.2em;
}

/*

Forms

*/

form {
    margin: 2rem 0;
}

button, form, input, select, textarea {
    font-size: inherit;
}

button, input, select, textarea, .uploader-label {
    width: 20rem;
}

input[type=checkbox].toggle-illegal {
    width: 1rem;
}

button, input, label, select, textarea {
    margin-top: 1rem;
}

input[type=number] {
    width: 2rem;
}

label {
    display: block;
    float: left;
    margin-right: 1rem;
    text-align: right;
    width: 10rem;
}

textarea {
    height: 10rem;
}

label {
    margin-right: 1rem;
    width: 10rem;
}

input, select, textarea {
    margin-left: 1rem;
}

button {
    appearance: button;
    -moz-appearance: button;
    -webkit-appearance: button;
}

button, div.error, .uploader-label {
    margin-left: 12rem;
}

div.error {
    color: red;
}

input.error, select.error, textarea.error {
    border: 0.05rem solid red;
}

.uploader {
    display: none;
}

.uploader-label {
    cursor: pointer;
    float: none;
    margin-top: 0;
    text-align: left;
}

.draw-report {
    visibility: hidden;
}

form.inline, .inline input, .inline select, .inline textarea, .inline label, .inline button {
    display: inline-block;
    float: none;
    margin: 0;
    max-width: 100%;
    width: inherit;
}

/*

Search

Styles for the Google search box.
We need to override a lot of Google's inline styles hence a lot of !important.

*/

.search {
    float: right;
    padding: 3rem 0 1rem 0; /* matches h1 as it floats alongside the logo */
}

.gsc-control-cse {
    background: transparent !important; /* csslint allow: important */
    border: 0 !important; /* csslint allow: important */
    color: #502828 !important; /* csslint allow: important */
    width: 20rem !important; /* csslint allow: important */
}

.gsc-input {
    background: none !important; /* csslint allow: important */
    font-family: inherit !important; /* csslint allow: important */
    font-size: inherit !important; /* csslint allow: important */
}

.gsc-wrapper, .gsc-results-wrapper-overlay, .gsc-results-root {
    background: #f9f9f9 !important; /* csslint allow: important */
    color: #502828 !important; /* csslint allow: important */
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important; /* csslint allow: important */
    font-size: 1em !important; /* csslint allow: important */
    line-height: 1.333 !important; /* csslint allow: important */
}

.gsc-wrapper a {
    text-decoration: none !important; /* csslint allow: important */
    text-transform: none;
}

.gsc-snippet {
    white-space: normal !important; /* csslint allow: important */
}

td.gsc-table-cell-snippet-close, td.gsc-table-cell-thumbnail {
    padding-left: 8px !important; /* csslint allow: important */
}

.gsc-cursor-page:hover {
    text-decoration: none !important; /* csslint allow: important */
}

.gs-title, .gs-title b {
    height: inherit !important; /* csslint allow: important */
    text-decoration: none !important; /* csslint allow: important */
}

.gsc-orderby-container {
    display: none;
}

.gsc-wrapper div:after {
    display: inherit;
}

.gsc-control-cse {
    padding: 0 !important; /* csslint allow: important */
}

.gsst_a {
    padding-top: 0.45rem !important; /* csslint allow: important */
}

.gsc-search-button {
    margin-top: 5px !important; /* csslint allow: important */
}
/* ... */

